src/test/deca/syntax/invalid/mauvais_while_6.deca
// Description:
//    mauvaise utilisation du while: autre chose qu'une inst dans les crochets
//
// Resultats:
// ligne 10: "extraneous input 'x' expecting {'<', '>', '=', '+', '-', '*', '%', '/', '.', ';', '==', '!=', '>=', '<=', '&&', '||', 'instanceof'}"


{
	int x = 0;
	while (x > 2) {
	      x = x+1;
				int x;
	      }
	  println("je suis au bout");    
}
